--- a/_data/pages.yml
+++ b/_data/pages.yml
@@ -7,7 +7,7 @@ work:
    link: /work
 
 blog:
-   headline: Publishing and speaking
+   headline: Writing and speaking
    link: /blog
 
 influences:
