--- a/_data/pages.yml
+++ b/_data/pages.yml
@@ -1,5 +1,5 @@
 home:
-   headline: UX manager and product designer. I specialise in health, biotech, and AI.
+   headline: I'm a UX leader specialising in complex products in digital health, biotech, and AI.
    link: /
 
 work:
