--- a/_data/pages.yml
+++ b/_data/pages.yml
@@ -1,5 +1,5 @@
 home:
-   headline: I'm a UX leader specialising in complex products in digital health, biotech, and AI.
+   headline: I design tools that place the power of AI in the hands of expert users. I specialise in digital health and life sciences.
    link: /
 
 work:
