--- a/_data/pages.yml
+++ b/_data/pages.yml
@@ -25,7 +25,7 @@ project-evinova:
 
 project-benevolent:
    headline: BenevolentAI
-   link: https://benevolent.ai/
+   link: https://www.youtube.com/watch?v=jBMJofhswOU
 
 project-biodesign:
    headline: BioDesign Team
