--- a/_data/pages.yml
+++ b/_data/pages.yml
@@ -1,5 +1,5 @@
 home:
-   headline: I design digital tools for people who use them to do incredible things — understand biology, create new medicines, treat disease, save patient lives.
+   headline: I design human-facing surfaces for data platforms. 
    link: /
 
 case-studies:
