Rename case studies to Work in navigation

--- a/_data/pages.yml
+++ b/_data/pages.yml
@@ -1,9 +1,9 @@
 home:
-   headline: I design human-facing surfaces for data platforms. 
+   headline: I design human-facing surfaces for data platforms.
    link: /
 
 case-studies:
-   headline: Case studies
+   headline: Work that I'm proud of
    link: /case-studies
 
 work:
