--- a/_data/pages.yml
+++ b/_data/pages.yml
@@ -1,5 +1,5 @@
 home:
-   headline: I design human-facing surfaces for data platforms.
+   headline: I design human-facing interfaces for data platforms
    link: /
 
 case-studies:
