--- a/_data/pages.yml
+++ b/_data/pages.yml
@@ -1,5 +1,5 @@
 home:
-   headline: I design human-facing interfaces for complex data products
+   headline: I design tools that unlock the value of data and enable expert decision-making
    link: /
 
 case-studies:
