Add description to data file

--- a/_data/mk.yml
+++ b/_data/mk.yml
@@ -1,5 +1,6 @@
 name: Marek Kultys
 author: Marek Kultys
+description: Marek Kultys is a design leader building digital products that unlock the value of data and enable expert decision-making in complex, regulated, AI-driven inductries. This is his professional website and portfolio.
 
 url: http://marekkultys.com
 
