Update handles in data file

--- a/_data/mk.yml
+++ b/_data/mk.yml
@@ -5,5 +5,5 @@ description: Marek Kultys is a design leader building digital products that unlo
 url: http://marekkultys.com
 
 email: marek.kultys
-twitter: marekkultys
 github: marek-kultys
+linkedin: marek-kultys
