Update description and headline

--- a/_data/mk.yml
+++ b/_data/mk.yml
@@ -1,6 +1,7 @@
 name: Marek Kultys
 author: Marek Kultys
-description: Marek Kultys is a design leader building digital products that unlock the value of data and enable expert decision-making in complex, regulated, AI-driven industries. This is his professional website and portfolio.
+title: Marek Kultys - Product Designer
+description: Marek Kultys is a Product Designer building tools that help people unlock the value of data and drive complex decision-making.
 
 url: http://marekkultys.com
 
