--- a/_data/pages.yml
+++ b/_data/pages.yml
@@ -1,5 +1,5 @@
 home:
-   headline: I design tools that unlock the value of data and enable expert decision-making
+   headline: I design tools that help people unlock the value of data and drive complex decision-making
    link: /
 
 case-studies:
