--- a/_data/pages.yml
+++ b/_data/pages.yml
@@ -2,9 +2,33 @@ home:
    headline: I design tools that unlock the value of data and enable expert decision-making
    link: /
 
-case-studies:
+case-study:
    headline: Case studies
    link: /case-studies
+   ee:
+      headline: Scaling AI-driven drug discovery with Entity Explorer
+      company: BenevolentAI
+      year: 2021
+   triage:
+      headline: Accelerating scientific decision-making in Target Triage
+      company: BenevolentAI
+      year: 2019
+   vivli: 
+      headline: Winning stakeholder support for Vivli
+      company: Science Practice
+      year: 2016
+   concept2: 
+      headline: Preparing patients for a clinical trial with Concept2
+      company: Science Practice
+      year: 2017
+   sb: 
+      headline: Surfacing hidden patterns in data with Sequence Bundles
+      company: Science Practice
+      year: 2013–2014
+   immunocore: 
+      headline: Communicating the brand and the science of Immunocore
+      company: Immunocore
+      year: 2012
 
 work:
    headline: Work that I'm proud of
