Redraft EV case title

--- a/_data/pages.yml
+++ b/_data/pages.yml
@@ -6,7 +6,7 @@ case-study:
    headline: Case studies
    link: /case-studies
    evinova:
-      heading: Going after a new market opportunity with Evinova
+      heading: Solving the complexity crisis in clinical trials with Evinova
       company: Evinova
       year: 2024-2025
    merlin:
