Minor change to headline

--- a/_data/mk.yml
+++ b/_data/mk.yml
@@ -1,7 +1,7 @@
 name: Marek Kultys
 author: Marek Kultys
 title: Marek Kultys - Product Designer
-description: Marek Kultys is a Product Designer building tools that help people unlock the value of data and drive complex decision-making.
+description: Marek Kultys is a product design leader who helps people drive complex decision-making by building tools that unlock the value of their data.
 
 url: http://marekkultys.com
 
