--- a/_data/pages.yml
+++ b/_data/pages.yml
@@ -1,5 +1,5 @@
 home:
-   headline: I design tools that help people unlock the value of data and drive complex decision-making
+   headline: I help people drive complex decision-making by unlocking the value of their data 
    link: /
 
 case-study:
